# ImageSorter

./: .editorconfig  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agent/workflows/: build.md  dev.md  lint.md  setup.md  test.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: extract-changelog.mjs
src/: app.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: folder.rs  mod.rs
src-tauri/src/services/: hashing.rs  metadata.rs  mod.rs  scanner.rs  sorter.rs
src/styles/: main.css
