[package]
name = "imagesorter"
version = "0.1.0"
description = "En desktop-applikasjon for å sortere bilder og finne duplikater"
authors = ["haklon"]
edition = "2021"

[lib]
name = "imagesorter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing - image må matche img_hash sin versjon (0.23)
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "gif", "bmp"] }
img_hash = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system utilities
walkdir = "2"

# Hashing utilities
sha2 = "0.10"
hex = "0.4"

# Parallel processing
rayon = "1.10"

# Directory utils
dirs = "5"

# Open files in default app
open = "5"

# Metadata / EXIF
kamadak-exif = "0.5"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
